--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                   <li>работа с невротическими, пограничными, психотическими пациентами;</li>
                   <li>депрессии;</li>
                   <li>тревожные состояния;</li>
-                  <li>реакции горя</li>
+                  <li>реакции горя.</li>
                 </ul>
 
 
