--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                       пищевая зависимость: нервная анорексия, нервная булимия, ожирение;
                   </li>
                   <li>
-                      наркотическая, алкогольная зависимость, игромания;
+                      наркотическая, алкогольная зависимость;
                   </li>
                   <li>
                       созависимые отношения;
